base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: warden
spec:
  selector:
    matchLabels:
      app: vault-warden
  serviceName: vault-service
  replicas: 1
  template:
    metadata:
      labels:
        app: vault-warden
    spec:
      containers:
      - name: vault-warden
        image: vaultwarden/server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: vw-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: vw-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
      volumeMode: Filesystem
