base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ext
spec:
  selector:
    app: vault-warden
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
